src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>LG_Estimated_Start_Time__c</fullName>
        <description>This field gives information about the estimated start time of the JOB.</description>
        <label>Estimated Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_Estimated_resolution_time__c</fullName>
        <description>This field tells you about the estimated resolution time of the JOB.</description>
        <label>Estimated Resolution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_Full_address__c</fullName>
        <description>Full Address details of Service of the Account Selected</description>
        <formula>LG_Service__r.LG_Address__r.LG_FullAddressDetails__c</formula>
        <inlineHelpText>Full Address details of Service of the Account Selected</inlineHelpText>
        <label>Full address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Invoice_End_Date__c</fullName>
        <formula>LG_Invoice_Header__r.UM_Payment_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_Invoice_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a look up field to the invoice header object.</description>
        <inlineHelpText>If Record Type is Billing Query then this field is required for Type Charge dispute and Case reason Missing payment or Extra charges.</inlineHelpText>
        <label>Invoice</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>UM_InvoiceHeader__c.UM_Billing_Location__c</field>
                <operation>equals</operation>
                <valueField>$Source.LG_Billing_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>UM_InvoiceHeader__c.UM_Billing_Location__c</field>
                <operation>equals</operation>
                <valueField>$Source.LG_Billing_Account_2__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>UM_InvoiceHeader__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Invoice_Start_Date__c</fullName>
        <description>formula field taken from invoice header invoice date</description>
        <formula>LG_Invoice_Header__r.UM_Invoice_Date__c</formula>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_Linked_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a look up field to the adjustment object.</description>
        <inlineHelpText>This field is not required for the type Account(If Record Type is Admin Change request). If Record Type is Billing Query then this field not required for type Request and Case reason Duplicate Invoice.</inlineHelpText>
        <label>Linked Adjustment</label>
        <referenceTo>Kenan_Adjustment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Mailing_Date__c</fullName>
        <description>Mail will be sent on this date.</description>
        <inlineHelpText>Select a date to send the mail.</inlineHelpText>
        <label>Mailing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_Notify_Customers__c</fullName>
        <inlineHelpText>Select Yes if you want to notify the customers about the maintenance activity.</inlineHelpText>
        <label>Notify Customers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Online_Billing_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a look up field to contact object.</description>
        <label>Online Billing Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_PM_Estimated_Duration__c</fullName>
        <description>Total Estimated Duration for Planned Maintenance Case</description>
        <formula>(LG_Estimated_resolution_time__c  -  LG_Estimated_Start_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PMEstimated Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Payment_Type__c</fullName>
        <description>Payment Type field from Billing Account</description>
        <formula>TEXT( LG_Billing_Account__r.LG_PaymentType__c)</formula>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Premise_Number__c</fullName>
        <description>It is a formula field linked to the &apos;premise number&apos; of the respective &apos;address&apos; object.</description>
        <formula>LG_Service__r.LG_Address__r.LG_PremiseNumber__c</formula>
        <inlineHelpText>Premise Number of Address.</inlineHelpText>
        <label>Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Product_Description__c</fullName>
        <description>Product description of Service</description>
        <formula>LG_Service__r.UM_ProductDescription__c</formula>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Receiving_IBAN__c</fullName>
        <description>formula field taking value from IBAN field in billing account of case</description>
        <formula>LG_Billing_Account__r.LG_BankAccountNumberIBAN__c</formula>
        <label>Receiving IBAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SLA_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox Checked for overriding infrastructure SLA</description>
        <inlineHelpText>Checkbox Check for overriding infrastructure SLA</inlineHelpText>
        <label>SLA/OLA Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_SLA_Resume_Date__c</fullName>
        <description>Created this dummy field so as to modify sla paused till field to work with time based workflow</description>
        <formula>LG_B2B_SLA_Paused_Date__c  - (1/24.0)</formula>
        <label>SLA/OLA Resume Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_SLA__c</fullName>
        <description>This is a formula field to the SLA of Service object.</description>
        <formula>LG_Service__r.LG_SLA__c</formula>
        <inlineHelpText>SLA type</inlineHelpText>
        <label>SLA Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Send_Email_To_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User for sending alert for planned maintenance case</description>
        <label>Send Email To Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>csord__Service__c.csord__Subscription__r.csord__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_SuborderNumber__c</fullName>
        <formula>LG_Solution__r.csord__Order__r.csord__Order_Number__c</formula>
        <label>Suborder Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Suborder_Jeopardy_Reason__c</fullName>
        <formula>TEXT(LG_Solution__r.Jeopardy_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suborder Jeopardy Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_accountID__c</fullName>
        <formula>Account.Company_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueNam__c</fullName>
        <formula>Owner:Queue.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Breached__c</fullName>
        <description>Created to check whether sla breached occurred for a case or not</description>
        <label>SLA/OLA Breached</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Resolution_Time__c</fullName>
        <formula>TEXT(
FLOOR(   ClosedDate  -  CreatedDate  -    VALUE(B2B_Care_Case_Pause_Time__c )    )
) &amp; &quot; Day(s) &quot; &amp;
TEXT(
 FLOOR(MOD((  ClosedDate  -  CreatedDate  -  VALUE(B2B_Care_Case_Pause_Time__c ) )*24,24))
) &amp;&quot; Hour(s) &quot; &amp;
TEXT(
ROUND(MOD((  ClosedDate  -  CreatedDate  -  VALUE(B2B_Care_Case_Pause_Time__c ) )*1440,60),0)
) &amp;&quot; Minute(s) &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Resolution Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Linked_Adjustment_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This a look up relationship to the Adjustment object. This is created for Unity Media (UM).</description>
        <inlineHelpText>If Record Type is Billing Query then this field is optional if type is Charge Dispute and reason is Missing Payment but not required for others.</inlineHelpText>
        <label>Linked Adjustment 2</label>
        <referenceTo>Kenan_Adjustment__c</referenceTo>
        <relationshipLabel>Cases (Linked Adjustment 2)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_Order_Comment_Prior_value__c</fullName>
        <label>Order Comment Prior value</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UM_Order_Comment_from_CaMa__c</fullName>
        <label>Order Comment from CaMa</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USMS_Ticket_ID__c</fullName>
        <externalId>true</externalId>
        <label>USMS Ticket ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LG_Telesales_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Telesales</label>
        <queue>LG_Telesales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Order_Management_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Order Management</label>
        <language>en_US</language>
        <queue>Order_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UM_Billing_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>SME Billing Queue</label>
        <language>en_US</language>
        <queue>UM_Billing_Queue</queue>
        <sharedTo>
            <group>Care_Agents</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UM_BusinessServiceSMECare_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Business Service - SME Care</label>
        <language>en_US</language>
        <queue>UM_BusinessServiceSMECare</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UM_Care_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>SME Care Queue</label>
        <language>en_US</language>
        <queue>UM_Care_Queue</queue>
        <sharedTo>
            <group>Care_Agents</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UM_HPBX_Inst_support_II_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Extern -HPBX Inst. &amp; support II</label>
        <language>en_US</language>
        <queue>UM_HPBX_Inst_support_II</queue>
        <sharedTo>
            <group>Care_Agents</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UM_HPBX_Inst_support_I_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Extern -HPBX Inst. &amp; support I</label>
        <language>en_US</language>
        <queue>UM_HPBX_Inst_support_I</queue>
        <sharedTo>
            <group>Care_Agents</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UM_HPBX_Logistics_II_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Extern -HPBX Logistik II</label>
        <language>en_US</language>
        <queue>UM_HPBX_Logistics_II</queue>
        <sharedTo>
            <group>Care_Agents</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UM_HPBX_Logistics_I_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Extern -HPBX Logistik I</label>
        <language>en_US</language>
        <queue>UM_HPBX_Logistics_I</queue>
        <sharedTo>
            <group>Care_Agents</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UM_NP_S_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>NP&amp;S</label>
        <language>en_US</language>
        <queue>UM_NP_S</queue>
        <sharedTo>
            <group>Care_Agents</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UM_NeuAnschlussen_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Neu Anschlussen</label>
        <language>en_US</language>
        <queue>UM_NeuAnschlussen</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UM_SME_Repair_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>SME Repair Queue</label>
        <language>en_US</language>
        <queue>UM_SME_Repair_Queue</queue>
        <sharedTo>
            <group>Care_Agents</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ManageAssets</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Manage Assets</label>
    </recordTypes>
    <recordTypes>
        <fullName>B2B_Care_Billing_Query_Request_UM</fullName>
        <active>true</active>
        <businessProcess>B2B Care Enquiry</businessProcess>
        <description>Billing Query Record type</description>
        <label>Billing Query</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cama_Customer_Type</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <description>Update Customer Type in Cama</description>
        <label>Cama Customer Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Coordinate</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Coordinate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <description>Default record type created for Orchestrator installation purpose</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_AccessPlanning</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Access Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_ActivateService</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Activate Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_AdHocLineItems</fullName>
        <active>false</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <description>Ad-Hoc Line Items</description>
        <label>Ad-Hoc Line Items</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_AssignOrderOwner</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <description>Assign Order Owner</description>
        <label>Assign Order Owner</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_AssignOwner</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Assign Owner</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_CARE_USMS_Ticket_UM</fullName>
        <active>true</active>
        <businessProcess>USMS Ticket Care</businessProcess>
        <description>PLEASE DO NOT USE IT, CREATE A USMS TICKET FROM TECHNICAL CASE</description>
        <label>USMS Ticket</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_CaMa_Ticket_Request_UM</fullName>
        <active>true</active>
        <businessProcess>USMS Ticket Care</businessProcess>
        <description>PLEASE DO NOT USE IT, CREATE A CAMA TICKET FROM TECHNICAL CASE</description>
        <label>CaMa Ticket</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_Care_Admin_Change_Request_UM</fullName>
        <active>true</active>
        <businessProcess>B2B Care Enquiry</businessProcess>
        <description>Admin Change Reuqest</description>
        <label>Admin Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_Care_Complaint_Request_UM</fullName>
        <active>true</active>
        <businessProcess>B2B Care Enquiry</businessProcess>
        <description>Complaint Request</description>
        <label>Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_Care_General_Query_Request_UM</fullName>
        <active>true</active>
        <businessProcess>B2B Care Enquiry</businessProcess>
        <description>General Query Request</description>
        <label>General Query</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_Care_Mass_Outage_Request_UM</fullName>
        <active>true</active>
        <businessProcess>B2B Care Planned And Network</businessProcess>
        <description>Mass Outage</description>
        <label>Outage/Network Incident</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_Care_Online_Billing_Request_UM</fullName>
        <active>true</active>
        <businessProcess>B2B Care Enquiry</businessProcess>
        <description>Online Billing Request</description>
        <label>Online Billing Query</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_Care_Planned_Maintenance_Request_UM</fullName>
        <active>true</active>
        <businessProcess>B2B Care Planned And Network</businessProcess>
        <description>Planned Maintenance</description>
        <label>Planned Maintenance Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_Care_SLA_Breach_Request_UM</fullName>
        <active>true</active>
        <businessProcess>B2B Care</businessProcess>
        <description>SLA Breach</description>
        <label>SLA Breach Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_Care_Service_Change_Request_UM</fullName>
        <active>true</active>
        <businessProcess>B2B Care Enquiry</businessProcess>
        <description>Service Change Request</description>
        <label>Service Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_Care_Technical_Request_UM</fullName>
        <active>true</active>
        <businessProcess>B2B Care Enquiry</businessProcess>
        <description>Technical Case</description>
        <label>Technical Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_ContactCustomer</fullName>
        <active>true</active>
        <businessProcess>LG_AppointmentSupportProcess</businessProcess>
        <description>Contact Customer</description>
        <label>Contact Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_Directory</fullName>
        <active>false</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <description>Directory</description>
        <label>Directory</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_FollowOnOrder</fullName>
        <active>true</active>
        <businessProcess>LG_FollowOnOrderProcess</businessProcess>
        <description>To capture additional changes to be performed on services that are being currently installed.</description>
        <label>Follow-On Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_InflightCancel</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <description>Inflight Cancel</description>
        <label>Inflight Cancel</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_InflightChange</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <description>Inflight Change</description>
        <label>Inflight Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_InflightConfiguration</fullName>
        <active>true</active>
        <businessProcess>LG_FollowOnOrderProcess</businessProcess>
        <label>Inflight Configuration</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_Install</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Install</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_JeopardyA</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Jeopardy</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_ManageNumbers</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <description>Enter or correct number details</description>
        <label>Manage Numbers</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_ManageSubscriptions</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <description>Manage Subscriptions</description>
        <label>Manage Subscriptions</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_NumberPort</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <description>Number Port</description>
        <label>Number Port</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_Provision</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Provision</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_ScheduleAppointment</fullName>
        <active>true</active>
        <businessProcess>LG_AppointmentSupportProcess</businessProcess>
        <label>Schedule Appointment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legacy_Fulfilment</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Legacy Fulfilment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manage_Tenant</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <description>sfom-2200 BDS Product</description>
        <label>Manage Tenant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Order_Cancel_Request</fullName>
        <active>true</active>
        <businessProcess>LG_FollowOnOrderProcess</businessProcess>
        <label>Order Cancel Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provision_One_Step</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Provision One Step</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support</fullName>
        <active>true</active>
        <businessProcess>Support</businessProcess>
        <description>Support</description>
        <label>Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Terminate</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Terminate</label>
    </recordTypes>
    <recordTypes>
        <fullName>UM_Cama_PendingOrder</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Cama PendingOrder</label>
    </recordTypes>
    <recordTypes>
        <fullName>UM_ManageLogistics</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <description>Arrange Logistice to Customer Shipping Address</description>
        <label>Manage Logistics</label>
    </recordTypes>
	 <recordTypes>
        <fullName>ManageAssets</fullName>
        <active>true</active>
        <businessProcess>LG_OMSupportProcess</businessProcess>
        <label>Manage Assets</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
   
    <validationRules>
        <fullName>LG_Care_USMS_BDS_IC_check</fullName>
        <active>true</active>
        <description>This will check the impacted customer value for the BDS service</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;LG_B2B_CARE_USMS_Ticket_UM&apos; &amp;&amp; 
ISNEW() &amp;&amp; 
(ISPICKVAL( LG_B2B_USMS_Service__c , &apos;B2B VPN DE PROD&apos;) || ISPICKVAL( LG_B2B_USMS_Service__c , &apos;Internal Provisioning Service&apos;)) &amp;&amp;( 
( 
(ISPICKVAL( LG_Care_Service_Impact__c , &apos;2-Service Degradation&apos;) &amp;&amp; 
(ISPICKVAL( LG_Care_Impacted_Customers__c , &apos;3-&quot;&gt;=4 sites/services of 1 customer&quot;&apos;) || 
ISPICKVAL( LG_Care_Impacted_Customers__c , &apos;2-&quot;1-3 sites/services of 1 customer&quot;&apos;)) ) || 
(ISPICKVAL( LG_Care_Service_Impact__c , &apos;4-Service Outage&apos;) &amp;&amp; ISPICKVAL( LG_Care_Impacted_Customers__c , &apos;1-&quot;1 customer&quot;&apos;)) 
)
)</errorConditionFormula>
        <errorDisplayField>LG_Care_Impacted_Customers__c</errorDisplayField>
        <errorMessage>2-Service Degradation can have either 4-&quot;&gt;= 4 customers&quot; or 1-&quot;1 customer&quot; as Impacted Customers and 1-&quot;1 customer&quot; is not valid for 4-Service Outage.</errorMessage>
    </validationRules>
</CustomObject>